@@ -1,4 +1,8 @@
-2003-08-18  John Luke <jluke@cfl.rr.com>
+2003-08-25  John Luke  <jluke@cfl.rr.com>
+
+	* en/Gtk/Layout.xml: mostly documented
+
+2003-08-18  John Luke  <jluke@cfl.rr.com>
 
 	* en/Gnome/Help.xml: documented
 	* en/Gnome/CanvasText.xml: add example from monkeyguide
